--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,9 @@
 body {
     font-family: 'Secular One', sans-serif;
 }
+.container  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 5vh;
+  }
